# retailops-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  SECURITY.md  USER_GUIDE.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
retailops_cli/: __main__.py  client.py  config.py  errors.py  files.py  output.py  pager.py  state.py
retailops_cli/commands/: __init__.py  auth.py  categories.py  customers.py  dashboard.py  inventory.py  kiosk.py  mcp_skill.py  orders.py  payments.py  products.py  roles.py  schema.py  settings.py  users.py
tests/: conftest.py  test_client.py  test_commands_smoke.py  test_config.py  test_dry_run.py  test_modern_cli_api_parity.py  test_orders.py  test_output.py  test_pager.py
